NextFilter refactoring